--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -44,7 +44,7 @@ test:
 
 about:
   home: https://CRAN.R-project.org/package=GenKern
-  license: GPL-2
+  license: GPL-2.0-only
   summary: Computes generalised KDEs
   license_family: GPL2
   license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2'
