MNT: Re-rendered with conda-build 3.21.7, conda-smithy 3.16.1, and conda-forge-pinning 2021.12.30.13.14.56

--- a/.ci_support/osx_64_r_base4.0.yaml
+++ b/.ci_support/osx_64_r_base4.0.yaml
@@ -5,9 +5,11 @@ c_compiler:
 c_compiler_version:
 - '11'
 channel_sources:
-- conda-forge,defaults
+- conda-forge
 channel_targets:
 - conda-forge main
+cran_mirror:
+- https://cran.r-project.org
 macos_machine:
 - x86_64-apple-darwin13.4.0
 pin_run_as_build:
